Adds new font icon version

--- a/assets/fonts/Icon-font/icons-reference.html
+++ b/assets/fonts/Icon-font/icons-reference.html
@@ -79,6 +79,34 @@
           <div class="icon icon-password"></div>
           <input type="text" readonly="readonly" value="password">
         </li>
+        <li>
+          <div class="icon icon-mail"></div>
+          <input type="text" readonly="readonly" value="mail">
+        </li>
+        <li>
+          <div class="icon icon-link"></div>
+          <input type="text" readonly="readonly" value="link">
+        </li>
+        <li>
+          <div class="icon icon-facebook"></div>
+          <input type="text" readonly="readonly" value="facebook">
+        </li>
+        <li>
+          <div class="icon icon-expense"></div>
+          <input type="text" readonly="readonly" value="expense">
+        </li>
+        <li>
+          <div class="icon icon-embed"></div>
+          <input type="text" readonly="readonly" value="embed">
+        </li>
+        <li>
+          <div class="icon icon-twitter"></div>
+          <input type="text" readonly="readonly" value="twitter">
+        </li>
+        <li>
+          <div class="icon icon-revenue"></div>
+          <input type="text" readonly="readonly" value="revenue">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -145,6 +173,34 @@
         <li>
           <div data-icon="o" class="icon"></div>
           <input type="text" readonly="readonly" value="o">
+        </li>
+        <li>
+          <div data-icon="q" class="icon"></div>
+          <input type="text" readonly="readonly" value="q">
+        </li>
+        <li>
+          <div data-icon="r" class="icon"></div>
+          <input type="text" readonly="readonly" value="r">
+        </li>
+        <li>
+          <div data-icon="s" class="icon"></div>
+          <input type="text" readonly="readonly" value="s">
+        </li>
+        <li>
+          <div data-icon="t" class="icon"></div>
+          <input type="text" readonly="readonly" value="t">
+        </li>
+        <li>
+          <div data-icon="u" class="icon"></div>
+          <input type="text" readonly="readonly" value="u">
+        </li>
+        <li>
+          <div data-icon="v" class="icon"></div>
+          <input type="text" readonly="readonly" value="v">
+        </li>
+        <li>
+          <div data-icon="w" class="icon"></div>
+          <input type="text" readonly="readonly" value="w">
         </li>
       </ul>
     </div>
