--- a/assets/fonts/Icon-font/icons-reference.html
+++ b/assets/fonts/Icon-font/icons-reference.html
@@ -107,6 +107,10 @@
           <div class="icon icon-revenue"></div>
           <input type="text" readonly="readonly" value="revenue">
         </li>
+        <li>
+          <div class="icon icon-ribbon"></div>
+          <input type="text" readonly="readonly" value="ribbon">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -201,6 +205,10 @@
         <li>
           <div data-icon="w" class="icon"></div>
           <input type="text" readonly="readonly" value="w">
+        </li>
+        <li>
+          <div data-icon="x" class="icon"></div>
+          <input type="text" readonly="readonly" value="x">
         </li>
       </ul>
     </div>
